# libkqueue

./: .gitignore  Makefile.am  libkqueue.pc.in  zos
src/common/: alloc.h  debug.h  filter.c  kevent.c  knote.c  kqueue.c  map.c  private.h  tree.h
src/linux/: platform.c
src/posix/: platform.c  platform.h  posix-kevent.c  timer.c  user.c
src/windows/: platform.h
src/zos/: knote_hash_table.c  knote_hash_table.h  platform.c  platform.h  posix-kevent.c  proc.c  read.c  signal.c  timer.c  tls.c  user.c  vnode.c  write.c
test/: Makefile  common.h  kevent.c  main.c  proc.c  test-kevent.c  test-main.c  test-proc.c  test-read.c  test-signal.c  test-timer.c  test-user.c  test-vnode.c  test-write.c
test/stress/: main.c
zosbuild/: GNUmakefile  GNUmakefile.linux  testenv  zosconfig.h
